# subsetter.wasm

./: Cargo.toml  Makefile  README.md
src/: lib.rs
wit/: world.wit
